--- a/EFCorePerformanceTips/appsettings.json
+++ b/EFCorePerformanceTips/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=ProductDB;Integrated Security=True;Encrypt=False"
+    "DefaultConnection": "Server=.;Database=ProductDB;Integrated Security=True;MultipleActiveResultSets=true;Encrypt=False"
   },
   "AllowedHosts": "*"
 }
